# copy_trader

./: .gitignore  .importlinter  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
config/: base.yaml  dev.yaml  paper.yaml  prod.yaml
deploy/systemd/: copy-trader@.service
docs/: CANARY_CHECKLIST.md  CANARY_METRICS.md  CONTRIBUTING.md  POSTMORTEM_TEMPLATE.md  PRODUCTION_ONBOARD.md
mockup/: README.md  audit.html  doctor.html  index.html  overview.html  reconcile.html  runners-create.html  runners-detail.html  runners-list.html  settings-accounts.html  settings-capital.html  settings-fixed-position.html  settings-index.html  settings-notify.html  settings-pyramid.html  settings-risk.html  settings-strategies.html
mockup/assets/: style.css
openspec/changes/autonomous-bootstrap-driver/: tasks.md
src/copy_trader/: __init__.py
tests/: test_layering.py  test_toolchain.py
tests/cli/: test_dashboard_settings.py  test_dashboard_smoke.py  test_doctor.py  test_reconcile.py  test_registry.py
tests/config/: test_runtime_lock.py  test_settings_overlay.py
tests/core/: test_models.py
tests/exchanges/: test_paper.py  test_protocol_contract.py  test_registry.py
tests/execution/: test_reconciler.py
tests/integration/: test_auto_dev_loop.sh
tests/persistence/: test_cross_environment_guard.py  test_ledger.py  test_runner_registry.py
tests/pnl/: test_golden.py
tests/runners/: test_backtest.py  test_live_dry_run.py  test_multi_venue_reconcile.py  test_service.py
tests/strategies/: test_hello.py
(+80 files in other folders)
