[project]
name = "copy-trader"
version = "0.0.1"
description = "Greenfield copy-trade system for crypto exchanges"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [
    { name = "lizhao903" },
]
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "typer>=0.12",
    "pyyaml>=6.0",
    "binance-connector>=3.13.0",
    "fastapi>=0.136.1",
    "uvicorn>=0.46.0",
    "jinja2>=3.1.6",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "import-linter>=2.0",
]

[project.scripts]
copy-trader = "copy_trader.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/copy_trader"]

[tool.uv]
required-version = ">=0.7,<0.8"
dev-dependencies = [
    "pytest>=8.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "import-linter>=2.0",
    "pytest-socket>=0.7",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "vcrpy>=6.0",
    "types-pyyaml>=6.0",
    "pytest-timeout>=2.4.0",
]

[tool.pytest.ini_options]
addopts = "--disable-socket --allow-unix-socket -m 'not live'"
markers = [
    "live: 需要真实外部 API（CI 与 driver 跳过）",
]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/copy_trader"]
